added import settings

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"cp-cli": "2.0.0",
 		"css-mediaquery": "0.1.2",
 		"date-fns": "2.8.1",
+		"dotenv": "^8.2.0",
 		"downshift": "3.4.2",
 		"fg-loadcss": "2.1.0",
 		"formik": "2.1.4",
