--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,12 @@
 
 # dependencies
 /~
-/node_modules
+node_modules/
 /.pnp
 .pnp.js
 
 # testing
 /coverage
-
 # redactor
 /.idea
 elementsMenu.js
@@ -34,3 +33,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 yarn.lock
+package-lock.json
