--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@material-ui/lab": "4.0.0-alpha.53",
 		"@material-ui/pickers": "3.2.10",
 		"@material-ui/styles": "4.9.14",
+		"@progress/kendo-react-pdf": "^4.3.0",
 		"@reduxjs/toolkit": "1.3.6",
 		"@tanem/svg-injector": "8.0.50",
 		"apexcharts": "3.19.2",
