--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
 		"react-select": "3.1.0",
 		"react-swipeable-views": "0.13.9",
 		"react-syntax-highlighter": "12.2.1",
+		"react-to-print": "^2.12.3",
 		"react-window": "1.8.5",
 		"redux": "4.0.5",
 		"redux-persist": "6.0.0",
